FullDataWork/Code/Training/MultiTask/batch_job_files/.ipynb_checkpoints/rebal_3_net_kfold_4-checkpoint.err
  File "/hpc/home/mk423/Anxiety/FullDataWork/Code/Training/rebal_3_net.py", line 120
    nmf_max_iter=3000long_train_,
                               ^
SyntaxError: invalid syntax
srun: error: dcc-brownlab-gpu-01: task 0: Exited with exit code 1
